[gd_scene load_steps=8 format=3 uid="uid://dhtgg27r6pgr2"]

[ext_resource type="Texture2D" uid="uid://7r1d1uu8g2l6" path="res://Resources/Graphics/GeneralUI/menu_background.png" id="1"]
[ext_resource type="FontFile" uid="uid://bicjs0tjxcn80" path="res://Resources/Fonts/orange-kid.regular.ttf" id="2"]
[ext_resource type="Script" path="res://GeneralUIScripts/OptionsScreen.gd" id="3"]
[ext_resource type="Material" uid="uid://3tb8733jaxk6" path="res://Resources/AlphaScissor.tres" id="4"]
[ext_resource type="Theme" uid="uid://dvwt0gddw54iw" path="res://VNTheme.tres" id="7"]
[ext_resource type="FontFile" path="res://Resources/Fonts/orange-kid_small.tres" id="8"]

[sub_resource type="FontFile" id="1"]
fallbacks = Array[Font]([ExtResource("2")])
subpixel_positioning = 0
msdf_pixel_range = 14
msdf_size = 128
cache/0/16/0/ascent = 0.0
cache/0/16/0/descent = 0.0
cache/0/16/0/underline_position = 0.0
cache/0/16/0/underline_thickness = 0.0
cache/0/16/0/scale = 1.0
cache/0/16/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/16/0/kerning_overrides/65/0 = Vector2(0, 0)
cache/0/65/0/ascent = 0.0
cache/0/65/0/descent = 0.0
cache/0/65/0/underline_position = 0.0
cache/0/65/0/underline_thickness = 0.0
cache/0/65/0/scale = 1.0
cache/0/65/0/kerning_overrides/16/0 = Vector2(0, 0)
cache/0/65/0/kerning_overrides/65/0 = Vector2(0, 0)

[node name="OptionsScreen" type="TextureRect"]
offset_right = 1200.0
offset_bottom = 675.0
theme = ExtResource("7")
texture = ExtResource("1")
expand_mode = 1
script = ExtResource("3")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
offset_left = 148.0
offset_top = 50.0
offset_right = 1348.0
offset_bottom = 824.0
scale = Vector2(0.75, 0.75)
theme_override_constants/separation = 29

[node name="TitleContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="VBoxContainer/TitleContainer"]
material = ExtResource("4")
layout_mode = 2
theme_override_fonts/font = SubResource("1")
text = "Settings"

[node name="SettingsContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 30

[node name="GridContainer" type="GridContainer" parent="VBoxContainer/SettingsContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/h_separation = 150
theme_override_constants/v_separation = 15
columns = 2

[node name="Label" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
material = ExtResource("4")
layout_mode = 2
theme_override_fonts/font = ExtResource("8")
text = "Music Volume:"

[node name="MusicSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 6
value = 100.0

[node name="Soundeffects" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("8")
text = "Sound Effect Volume:"

[node name="SoundeffectsSlider" type="HSlider" parent="VBoxContainer/SettingsContainer/GridContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("7")
value = 100.0

[node name="Label2" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("8")
text = "Resolution:"

[node name="ResolutionButton" type="OptionButton" parent="VBoxContainer/SettingsContainer/GridContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("7")
alignment = 1

[node name="Label3" type="Label" parent="VBoxContainer/SettingsContainer/GridContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_vertical = 1
theme_override_fonts/font = ExtResource("8")
text = "Fullscreen:"

[node name="FullscreenToggle" type="CheckButton" parent="VBoxContainer/SettingsContainer/GridContainer"]
material = ExtResource("4")
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="BackContainer" type="MarginContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_top = 83
theme_override_constants/margin_bottom = 0

[node name="BackButton" type="Button" parent="VBoxContainer/BackContainer"]
material = ExtResource("4")
layout_mode = 2
text = "Save & Go Back"

[connection signal="value_changed" from="VBoxContainer/SettingsContainer/GridContainer/MusicSlider" to="." method="_on_MusicSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SettingsContainer/GridContainer/SoundeffectsSlider" to="." method="_on_SoundeffectsSlider_value_changed"]
[connection signal="item_selected" from="VBoxContainer/SettingsContainer/GridContainer/ResolutionButton" to="." method="_on_ResolutionButton_item_selected"]
[connection signal="toggled" from="VBoxContainer/SettingsContainer/GridContainer/FullscreenToggle" to="." method="_on_FullscreenToggle_toggled"]
[connection signal="pressed" from="VBoxContainer/BackContainer/BackButton" to="." method="_on_BackButton_pressed"]
